demo/traefik/03-middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: traefik
spec:
  redirectScheme:
    scheme: https
    permanent: true
