demo/traefik/03-deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  namespace: traefik
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.0
          args:
            - --global.checkNewversion=false
            - --global.sendAnonymousUsage=false
            - --log.level=debug
            - --entryPoints.http.address=:80
            - --entryPoints.https.address=:443
            - --entryPoints.tcp.address=:8081
            - --providers.kubernetesCRD
            - --api.insecure
            - --metrics.prometheus
            - --tracing.jaeger.samplingServerURL=http://jaeger-agent.jaeger.svc.cluster.local:5778/sampling
            - --tracing.jaeger.localAgentHostPort=jaeger-agent.jaeger.svc.cluster.local:6831
            - --certificatesresolvers.default.acme.tlschallenge
            - --certificatesresolvers.default.acme.email=your@email.com
            - --certificatesresolvers.default.acme.storage=acme.json
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: tcp
              containerPort: 8081
            - name: admin
              containerPort: 8080
