demo/traefik/04-deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  namespace: traefik
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.0
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: tcp
              containerPort: 8081
            - name: admin
              containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /etc/traefik
      volumes:
        - name: config-volume
          configMap:
            name: traefik-config
