demo/traefik/05-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: traefik
  name: traefik-ingress-controller
  labels:
    app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-ingress-lb
  template:
    metadata:
      labels:
        name: traefik-ingress-lb
        app: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
        - image: traefik:v2.1
          name: traefik-ingress-lb
          imagePullPolicy: Always
          args:
            - --global.checknewversion=false
            - --global.sendanonymoususage=false
            - --log.level=DEBUG
            - --entrypoints.http.address=:80
            - --entrypoints.https.address=:443
            - --providers.kubernetescrd
            # - --certificatesResolvers.default.acme.email=ops@containo.us
            # - --certificatesResolvers.default.acme.tlsChallenge=true
            # - --certificatesResolvers.default.acme.storage=/data/acme.json
            - --api.dashboard=true
            - --api.insecure=true
            - --ping=true
            - --metrics.prometheus
          ports:
            - name: traefik-http
              containerPort: 80
            - name: traefik-api
              containerPort: 8080
            - name: traefik-https
              containerPort: 443
          readinessProbe:
            httpGet:
              path: /ping
              port: traefik-api
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /ping
              port: traefik-api
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          volumeMounts:
            - name: traefik-storage
              mountPath: /data
      volumes:
        - name: traefik-storage
          persistentVolumeClaim:
            claimName: traefik-storage
