demo/traefik/04-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: traefik
  name: traefik-lb-svc
  labels:
    app: traefik-lb-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: traefik-http
      name: http
    - port: 443
      targetPort: traefik-https
      name: https
  selector:
    app: traefik-ingress-lb

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik
  labels:
    app: traefik-dashboard
spec:
  type: NodePort
  ports:
    - port: 8080
  selector:
    app: traefik-ingress-lb
