demo/traefik/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: http
      port: 80
  selector:
    app: traefik
