demo/traefik/04-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - http
    - https
  routes:
    - match: Host(`dashboard.docker.localhost`)
      kind: Rule
      services:
        - name: traefik
          port: 8080
  tls:
    certResolver: default
