demo/traefik/05-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - http
    - https
  routes:
    - kind: Rule
      match: Host(`dashboard.meetup.containous.tech`)
      services:
        - name: traefik-dashboard
          port: 8080
