demo/traefik/5-dashboard.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  routes:
    - match: Host(`dashboard.localhost`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
